# cpp_base_project

./: .clang-tidy  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  config  dockerfile
.circleci/: config.yml
cmake/: clang_tools.cmake  cppcheck.cmake  unit_test.cmake
include/: inireader.h  inputparser.h  utils.h
src/: main.cpp
test/add/: test_add.cpp
test/utils/: test_utils.cpp
